patch for bug 216430 "scrolling slow due to huge background image (regression)" r=pavlov,jdunn sr=tor a=chofmann